Removed depricated methods